--- a/LibraryManagment/App.xaml
+++ b/LibraryManagment/App.xaml
@@ -369,6 +369,47 @@
         </Style>
         <!-- End of Flat ComboBox -->
 
+        <!-- DataGrid style -->
+        <Style x:Key="DataGridStyle1" TargetType="{x:Type DataGrid}">
+            <Setter Property="ColumnHeaderStyle" Value="{DynamicResource ColumnHeaderStyle1}"/>
+            <Setter Property="CellStyle" Value="{DynamicResource ColumnrowStyle}"/>
+        </Style>
+
+        <!-- DataGridColumnHeader style -->
+        <Style x:Key="ColumnHeaderStyle1" TargetType="DataGridColumnHeader">
+            <Setter Property="Height" Value="37"/>
+            <Setter Property="Background" Value="#FF134187"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Padding" Value="5,5,5,5"/>
+            <Setter Property="BorderBrush" Value="#FF134187"/>
+            <Setter Property="BorderThickness" Value="4,0,0,0"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="ToolTip" Value="Tıkla Ve Grupla"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ColumnrowStyle" TargetType="DataGridCell">
+            <Setter Property="Background" Value="{x:Null}" />
+            <Setter Property="BorderThickness" Value="4,0,0,0"/>
+            <Setter Property="BorderBrush" Value="#eeeeee"/>
+            <Setter Property="Padding" Value="5,5,5,5"/>
+            <Setter Property="Foreground" Value="#FF042263"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="#3168bc"/>
+                    <Setter Property="BorderBrush" Value="#FF042263"/>
+                    <Setter Property="Foreground" Value="White"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
     </Application.Resources>
 </Application>
